# retail-data-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_zips.py
src/retail_gen/: __init__.py  config.py  main.py
src/retail_gen/data/: zips.csv
src/retail_gen/dimensions/: customers.py  products.py  stores.py
src/retail_gen/facts/: ecommerce.py  fulfillment.py  inventory_snapshots.py  pos_transaction_items.py  pos_transactions.py  returns.py
src/retail_gen/lib/: batch.py  table.py
src/retail_gen/lib/providers/: address.py  temporal.py
src/retail_gen/upload/: bigquery.py  gcs.py
tests/: conftest.py  test_config.py
tests/dimensions/: test_customers.py  test_products.py  test_stores.py
tests/facts/: test_ecommerce.py  test_fulfillment.py  test_inventory.py  test_pos.py  test_returns.py
tests/lib/: test_batch.py  test_table.py
tests/lib/providers/: test_address.py  test_temporal.py
